# src/main/java/pl/iodkovskaya/travel_allowance_calculation/logic/transport/model/dto/TransportCostDto.java
@@ -1,0 +1,50 @@
+package pl.iodkovskaya.travel_allowance_calculation.logic.transport.model.dto;
+
+import jakarta.persistence.Column;
+import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+
+@Getter
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
+@AllArgsConstructor
+public class TransportCostDto {
+    @NotNull(message = "inputtedDaysNumberForTransportCost cannot be null")
+    @Column(nullable = false)
+    private Integer inputtedDaysNumberForUndocumentedLocalTransportCost;
+
+    @Column(nullable = false)
+    private BigDecimal undocumentedLocalTransportCost;
+
+    @Column(nullable = false)
+    private BigDecimal documentedLocalTransportCost;
+
+    @NotBlank(message = "meansOfTransport cannot be blank")
+    @Column(nullable = false)
+    private String meansOfTransport;
+
+    @NotNull(message = "Kilometers by car engine up to 900cc cannot be null")
+    @Min(value = 0, message = "Kilometers by car engine up to 900cc cannot be negative")
+    private Long kilometersByCarEngineUpTo900cc;
+
+    @NotNull(message = "Kilometers by car engine above 900cc cannot be null")
+    @Min(value = 0, message = "Kilometers by car engine above 900cc cannot be negative")
+    private Long kilometersByCarEngineAbove900cc;
+
+    @NotNull(message = "Kilometers by motorcycle cannot be null")
+    @Min(value = 0, message = "Kilometers by motorcycle cannot be negative")
+    private Long kilometersByMotorcycle;
+
+    @NotNull(message = "Kilometers by moped cannot be null")
+    @Min(value = 0, message = "Kilometers by moped cannot be negative")
+    private Long kilometersByMoped;
+
+    @Column(nullable = false)
+    private BigDecimal costOfTravelByPublicTransport;
+}
