# src/main/java/pl/iodkovskaya/travel_allowance_calculation/logic/travel/model/dto/TravelResponseDto.java
@@ -6,6 +6,7 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import pl.iodkovskaya.travel_allowance_calculation.logic.diet.model.dto.DietResponseDto;
 import pl.iodkovskaya.travel_allowance_calculation.logic.overnightStay.model.dto.OvernightStayResponseDto;
+import pl.iodkovskaya.travel_allowance_calculation.logic.transport.model.dto.TransportCostResponseDto;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -27,4 +28,5 @@ public class TravelResponseDto {
     private BigDecimal advancePayment;
     private DietResponseDto dietResponse;
     private OvernightStayResponseDto overnightStayResponseDto;
+    private TransportCostResponseDto transportCostResponseDto;
 }
